laying the foundation

--- a/OlofOchRia/index.html
+++ b/OlofOchRia/index.html
@@ -26,41 +26,41 @@
                 </button>
                 <a class="navbar-brand" href="#">
                     <span class="glyphicon glyphicon-fire"></span>
-                    LOGO
+                    Olof och Ria 2016:08:27
                 </a>
             </div>
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active">
-                        <a href="#">Home</a>
+                        <a href="#">Start</a>
                     </li>
                     <li>
-                        <a href="#">Products</a>
+                        <a href="#">Karta</a>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Info <span class="caret"></span></a>
                         <ul class="dropdown-menu" aria-labelledby="about-us">
-                            <li><a href="#">Engage</a></li>
-                            <li><a href="#">Pontificate</a></li>
-                            <li><a href="#">Synergize</a></li>
+                            <li><a href="#">När?</a></li>
+                            <li><a href="#">Var?</a></li>
+                            <li><a href="#">Hur?</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="#">Kontakt</a>
                     </li>
                 </ul>
 
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container -->
+            </div>
+        </div>
     </nav>
-    <!-- Header -->
+    
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Dramatically Engage</h1>
-                <p>Objectively innovate empowered manufactured products whereas parallel platforms.</p>
-                <a href="#" class="btn btn-primary btn-lg">Engage Now</a>
+                <h1>Olof och Ria 2016/08/27</h1>
+                <p>Vart dyker den här texten upp?</p>
+                <a href="#" class="btn btn-primary btn-lg">Knapp</a>
             </div>
         </div>
     </header>
@@ -81,7 +81,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <img class="img-responsive img-circle center-block" src="images/microphone.jpg" alt="">
+                    <img class="img-responsive img-circle center-block" src="img/olofochria_fest.jpg" alt="">
                 </div>
                 <div class="col-sm-6">
                     <h2 class="section-header">Best in Class</h2>
@@ -102,7 +102,7 @@
                     <a href="#" class="btn btn-default btn-lg">Test It</a>
                 </div>
                 <div class="col-sm-6">
-                    <img class="img-responsive img-circle center-block" src="images/iphone.jpg" alt="">
+                    <img class="img-responsive img-circle center-block" src="img/olof_paris.jpg" alt="">
                 </div>
 
             </div>
@@ -141,7 +141,6 @@
             <h2 class="section-header"><span class="glyphicon glyphicon-pushpin text-primary"></span><br> Sanity Check</h2>
             <p class="lead text-muted">Holisticly predominate extensible testing procedures for reliable supply chains. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
             <a href="#" class="btn btn-primary btn-lg">Check Now</a>
-        </div>
         </div>
     </section>
 
