--- a/OlofOchRia/index.html
+++ b/OlofOchRia/index.html
@@ -9,6 +9,7 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
+    <link href="js/jquery.countdown.js" rel="stylesheet"/>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
 </head>
@@ -26,7 +27,7 @@
                 </button>
                 <a class="navbar-brand" href="#">
                     <span class="glyphicon glyphicon-fire"></span>
-                    Olof och Ria 2016:08:27
+                    Olof och Ria 2016/08/27
                 </a>
             </div>
             <!-- Navbar links -->
@@ -59,7 +60,19 @@
         <div class="header-content">
             <div class="header-content-inner">
                 <h1>Olof och Ria 2016/08/27</h1>
-                <p>Vart dyker den här texten upp?</p>
+
+                <div id="timer"></div>
+
+                <script type="text/javascript">
+                    $("#getting-started")
+                        .countdown("2016/08/27", function (event)
+                        {
+                            $(this).text(
+                                event.strftime('%D days %H:%M:%S')
+                            );
+                        });
+                </script>
+
                 <a href="#" class="btn btn-primary btn-lg">Knapp</a>
             </div>
         </div>
@@ -109,32 +122,7 @@
         </div>
     </section>
     <!-- Promos -->
-    <div class="container-fluid">
-        <div class="row promo">
-            <a href="#">
-                <div class="col-md-4 promo-item item-1">
-                    <h3>
-                        Unleash
-                    </h3>
-                </div>
-            </a>
-            <a href="#">
-                <div class="col-md-4 promo-item item-2">
-                    <h3>
-                        Synergize
-                    </h3>
-                </div>
-            </a>
-
-            <a href="#">
-                <div class="col-md-4 promo-item item-3">
-                    <h3>
-                        Procrastinate
-                    </h3>
-                </div>
-            </a>
-        </div>
-    </div><!-- /.container-fluid -->
+    
     <!-- Content 3 -->
     <section class="content content-3">
         <div class="container">
@@ -151,8 +139,8 @@
         <div class="contact">
             <div class="container">
                 <h2 class="section-heading">Contact Us</h2>
-                <p><span class="glyphicon glyphicon-earphone"></span><br> +1(23) 456 7890</p>
-                <p><span class="glyphicon glyphicon-envelope"></span><br> info@example.com</p>
+                <p><span class="glyphicon glyphicon-earphone"></span><br> Ria: 0738 14 40 93 <br/> Olof: 072 32 54 242</p>
+                <p><span class="glyphicon glyphicon-envelope"></span><br> info@olofochria.se</p>
             </div>
         </div>
 
@@ -163,14 +151,11 @@
         </div>
 
     </footer>
-    <!-- jQuery -->
+    
     <script src="js/jquery-1.11.3.min.js"></script>
-    <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-    <!-- Plugin JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
-
-    <!-- Custom Javascript -->
     <script src="js/custom.js"></script>
+    <script src="js/jquery.countdown.js"></script>
 </body>
 </html>
